<resources>
    <string name="app_name">Binar Academy</string>
    <string name="desc_motivation">Cracking the human brain to make learning as fun as watching Netflix, as addictive as browsing your Instagram feed</string>
    <string name="btn_message">Message</string>
    <string name="desc_highlights">Arif started at Binar Academy 1 years before you did</string>
    <string name="title_highlights">The Future of Education: How EdTech Maximizes Human Potential</string>
    <string name="content_desc">Just Image</string>
    <string name="desc_highlights_one">Arif started at Binar Academy 1 years before you did</string>
    <string name="title_highlights_one">You both work at Binar Academy</string>
    <string name="big_title_highlights">Highlights</string>
    <string name="view_jobs_hiring">View both jobs</string>
    <string name="desc_hiring">Binar Academy ∙ Jakarta Metropolitan Area ∙ 300 days ago</string>
    <string name="title_hiring"><![CDATA[Hiring a Business Analyst & 1 other]]></string>
    <string name="connect_friendship">307 mutual connections: Dr.Pratama Persadha, Normal Sasono, and 305 others</string>
    <string name="total_connect">500+ connections</string>
    <string name="spacing">∙</string>
    <string name="followers"><b>24,342</b> followers</string>
    <string name="location_person">Jakarta, Jakarta, Indonesia</string>
    <string name="instance">Binar Academy</string>
    <string name="mention_person">Talks about #techforgood and #socialentrepreneurship</string>
    <string name="number_person">1st</string>
    <string name="name_person">Arif Widayana</string>
    <string name="hint_search_people">Search people</string>
    <string name="button_chat">Chat</string>
    <string name="content_img">just image</string>
    <string name="button_order">Pesanan</string>
    <string name="button_promo">Promo</string>
    <string name="button_home">Beranda</string>
    <string name="desc_sub_tittle">Temukan kebutuhan cantik-mu hemat pakai GoPay dengan cashback 50%. Klik!</string>
    <string name="desc_title">Festival idaman perempuan!</string>
    <string name="button_resto">Restoran terdekat</string>
    <string name="button_voucher">Ada voucher ngaggur, nih</string>
    <string name="title_shortcut">Akses cepat</string>
    <string name="title_notif">Harta Karun bentar lagi hilang</string>
    <string name="value_xp">193 XP lagi ada Harta Karun</string>
    <string name="another">Lainnya</string>
    <string name="check_in">Check in</string>
    <string name="gopulsa">GoPulsa</string>
    <string name="gomart">GoMart</string>
    <string name="gosend">GoSend</string>
    <string name="gofood">GoFood</string>
    <string name="gocar">GoCar</string>
    <string name="goride">GoRide</string>
    <string name="eksplor">Eksplor</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="bayar">Bayar</string>
    <string name="klik_amp_cek_riwayat"><![CDATA[Klik & cek riwayat]]></string>
    <string name="rp109_048">Rp109.048</string>
    <string name="gopay">\tgopay</string>
    <string name="hint_search"><![CDATA[\tCari layanan, makanan, & tujuan]]></string>
    <string name="btn_home">Home</string>
    <string name="transaksi">Transaksi</string>
    <string name="whislist">Whislist</string>
    <string name="official_store">Official Store</string>
    <string name="feed">Feed</string>
    <string name="segera_habis">Segera Habis</string>
    <string name="jakarta_barat">Jakarta Barat</string>
    <string name="rp_108_000">Rp 108.000</string>
    <string name="_38">38%</string>
    <string name="_26">26%</string>
    <string name="rp_67_000">Rp 67.000</string>
    <string name="segera_habis">Segera Habis</string>
    <string name="jakarta_barat">Jakarta Barat</string>
    <string name="_38">38%</string>
    <string name="rp_108_000">Rp 108.000</string>
    <string name="_26">26%</string>
    <string name="rp_67_000">Rp 67.000</string>
    <string name="berakhir_dalam">Berakhir dalam</string>
    <string name="_09_menit_26_detik">09 menit 26 detik</string>
    <string name="_26">26%</string>
    <string name="jakarta_barat">Jakarta Barat</string>
    <string name="segera_habis">Segera Habis</string>
    <string name="rp_94_900">Rp 94.900</string>
    <string name="_26">26%</string>
    <string name="rp_69_900">Rp 69.900</string>
    <string name="live_shopping">Live Shopping</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="kejar_diskon">Kejar Diskon</string>
    <string name="tokopedia_play">Tokopedia Play</string>
    <string name="alat_facial_treatment_cuman_100rb">Alat Facial Treatment cuman 100rb?</string>
    <string name="kupon_spesial">Kupon Spesial</string>
    <string name="_4_8_rb">4.8 rb</string>
    <string name="tokopedia_play">Tokopedia Play</string>
    <string name="alat_facial_treatment_cuman_100rb">Alat Facial Treatment cuman 100rb?</string>
    <string name="kupon_spesial">Kupon Spesial</string>
    <string name="_2_rb">2 rb</string>
    <string name="uchii_store">uchii store</string>
    <string name="keep_and_calm_with_uchii">Keep and Calm With UCHII</string>
    <string name="kupon_spesial">Kupon Spesial</string>
    <string name="_2_5_rb">2.5 rb</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="video_menarik_untukmu">Video menarik untukmu</string>
    <string name="tokopedia_seru">Tokopedia Seru</string>
    <string name="bazar_hari_ini">Bazar Hari Ini</string>
    <string name="bangga_lokal">Bangga Lokal</string>
    <string name="peduli_lindungi">Peduli Lindungi</string>
    <string name="keuangan">Keuangan</string>
    <string name="top_up_amp_tagihan"><![CDATA[Top-Up & Tagihan]]></string>
    <string name="handphone_amp_tablet"><![CDATA[Handphone & Tablet]]></string>
    <string name="kebutuhan_harian">Kebutuhan Harian</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="official_store">Official Store</string>
    <string name="_23_kupon">23 Kupon</string>
    <string name="member_gold">Member Gold</string>
    <string name="_164_433_coins">164.433 Coins</string>
    <string name="rp109_048">Rp109.048</string>
    <string name="dikirim_ke_alamat_bekasi">Dikirim ke alamat bekasi</string>
    <string name="cari_powerbank">Cari powerbank</string>
    <string-array name="list_spinner">
        <item>Hitam</item>
        <item>Putih</item>
        <item>Biru</item>
    </string-array>
</resources>