<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter2.ConstraintActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_arrow_back"/>

                <EditText
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_search"
                    android:background="@color/grey"
                    android:hint="@string/hint_search_people"/>
            </LinearLayout>
        </Toolbar>

        <ImageView
            android:id="@+id/iv_header"
            android:src="@drawable/header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:scaleType="fitXY"
            android:contentDescription="@string/content_desc" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30">

        </androidx.constraintlayout.widget.Guideline>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:src="@drawable/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="100dp"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="@id/cv_profile"
            app:layout_constraintBottom_toBottomOf="@id/cv_profile">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:cardCornerRadius="100dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/white"
                    android:contentDescription="@string/content_desc" />
            </com.google.android.material.card.MaterialCardView>
        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/content_desc" />

        <LinearLayout
            android:id="@+id/ll_desc_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_profile"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_person"
                    android:textSize="28sp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/spacing"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_gravity="top"
                    android:text="@string/number_person"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/desc_motivation"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mention_person"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/instance"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_person"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/total_connect"
                    android:textColor="@color/blue"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_connect"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_desc_profile">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"
                android:contentDescription="@string/content_desc" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/green"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/ll_desc_profile"
            app:layout_constraintStart_toStartOf="@id/cv_connect"
            app:layout_constraintEnd_toEndOf="@id/cv_connect">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"
                android:contentDescription="@string/content_desc" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@id/cv_connect"
            app:layout_constraintTop_toBottomOf="@id/ll_desc_profile"
            android:text="@string/connect_friendship"/>

        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_connect"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="99"
                android:background="@drawable/bg_blue_corner_50"
                app:backgroundTint="@null"
                android:text="@string/btn_message"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_more_horiz"
                android:background="@drawable/border_no_fill_corner_50"
                android:contentDescription="@string/content_desc" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_desc_hiring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_message"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:padding="10dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_hiring"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_hiring"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_jobs_hiring"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintTop_toBottomOf="@id/ll_desc_hiring"
            android:layout_marginVertical="10dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/v_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/big_title_highlights"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/header"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_highlights_one"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_highlights_one"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/border_no_fill_corner_50"
                        android:text="@string/btn_message"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/header"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_highlights"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_highlights"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/border_no_fill_corner_50"
                        android:text="@string/btn_message"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/header"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_highlights"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_highlights"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/border_no_fill_corner_50"
                        android:text="@string/btn_message"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>